feat: header content

--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <title>Dropbox</title>
     <!-- CUSTOM STYLES -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
     <header class="flex">
         <!-- LEFTCOL -->
-        <div class="header-col">
-            
+        <div class="header-col flex">
+            <img src="./img/logo-small.png" alt="Dropbox Small Logo">
+            <ul class="flex crss-align">
+                <li><a href="">Perché Dropbox</a></li>
+                <li><a href="">Funzioni</a></li>
+                <li><a href="">Piani e Prezzi</a></li>
+            </ul>  
         </div>
         <!-- /LEFTCOL -->
         <!-- RIGHTCOL -->
-        <div class="header-col">
-
+        <div class="header-col flex crss-align end">
+            <ul class="flex crss-align">
+                <li><a href="">Supporto</a></li>
+                <li><a href="">Contatta l'ufficio vendite</a></li>
+                <li><a href="">Accedi</a></li>
+                <li class="button"><a class="white" href="">Inizia</a></li>
+            </ul> 
         </div>
         <!-- /RIGHTCOL -->
     </header>
