--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <!-- HEADER -->
     <header class="flex">
@@ -42,7 +46,18 @@
         <!-- HERO -->
         <section class="landing">
             <div class="hero big-cont">
-
+                <h1>Tutto ciò che ti serve per il lavoro, in unico posto</h1>
+                <div class="heroinfograph flex">
+                    <div class="hero-l-col flexcol">
+                        <span>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</span>
+                        <span class="button"><a class="white" href="">Inizia la prova gratuita</a></span>
+                        <span>Annulla in qualsiasi momento</span>
+                        <span><i class="fa-solid fa-arrow-down"></i></span>
+                    </div>
+                    <div class="hero-r-col">
+                        <img src="./img/jumbo.png" alt="jumbo">
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /HERO -->
