feat: scroll to section with id

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <img src="./img/logo-small.png" alt="Dropbox Small Logo">
             <ul class="flex crss-align">
                 <li><a href="">Perché Dropbox</a></li>
-                <li><a href="">Funzioni</a></li>
-                <li><a href="">Piani e Prezzi</a></li>
+                <li><a href="#functions">Funzioni</a></li>
+                <li><a href="#price">Piani e Prezzi</a></li>
             </ul>  
         </div>
         <!-- /LEFTCOL -->
         <!-- RIGHTCOL -->
         <div class="header-col flex crss-align">
             <ul class="flex crss-align">
-                <li><a href="">Supporto</a></li>
-                <li><a href="">Contatta l'ufficio vendite</a></li>
+                <li><a href="#support">Supporto</a></li>
+                <li><a href="#salescontact">Contatta l'ufficio vendite</a></li>
                 <li><a href="">Accedi</a></li>
                 <li class="button"><a class="white" href="">Inizia</a></li>
             </ul> 
@@ -63,7 +63,7 @@
         <!-- /HERO -->
 
         <!-- SECTION -->
-        <section class="plans small-cont">
+        <section id="price" class="plans small-cont">
             <div class="billing_type">
                 <h2>Trova il piano business che fa per te</h2>
                 <div class="bill_select flex">
@@ -95,7 +95,7 @@
         <!-- /SECTION -->
 
         <!-- SECTION -->
-        <section class="contactus small-cont flex">
+        <section id="salescontact" class="contactus small-cont flex">
             <div class="leftcol photo_adv border">
 
             </div>
@@ -106,7 +106,7 @@
         <!-- /SECTION -->
 
         <!-- SECTION -->
-        <section class="description small-cont">
+        <section id="functions" class="description small-cont">
             <div class="disclaimer border">
 
             </div>
@@ -157,7 +157,7 @@
         <!-- /SECTION -->
 
         <!-- SECTION -->
-        <section class="faq small-cont">
+        <section id="support" class="faq small-cont">
             <div>
 
             </div>
