--- a/index.html
+++ b/index.html
@@ -77,8 +77,40 @@
                     </div>   
                 </div>
             </div>
-            <div class="main_plans border flex">
-                <div class="plan_card border">
+            <div class="main_plans flex">
+                <div class="plan_card">
+                    <div class="plan_type">
+                        <i class="fa-solid fa-user"></i> Singolo
+                    </div>
+                    <div class="plan_description">
+                        <div class="price flexcol">
+                            <h4>Professional</h4>
+                            <span><strong>€ 12.00</strong></span>
+                            <span class="bill_time">/mese</span>
+                        </div>
+                        <div class="features">
+                            <ul>
+                                <li>1 utente</li>
+                                <li>5TB di spazio di archiviazione sicuro</li>
+                                <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            </ul>
+                        </div>
+                        <div class="button trynow">
+                            <a class="white" href="#">Prova Gratis per 30 Giorni</a>
+                        </div>
+                        <div class="shopnow">
+                            <span>oppure <a href="#">acquista ora</a></span>
+                        </div>
+                        <hr>
+                        <div class="plan_highlights">
+                            <h5>Punti Salienti del piano</h5>
+                            <ul>
+                                <li>Invia file fino a 100gb con Dropbox Transfert</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                            </ul>
+                        </div>
+                        
+                    </div>
 
                 </div>
                 <div class="plan_card border">
