feat: card completed same height

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="main_plans flex space">
 
                 <!-- PLAN CARD -->
-                <div class="plan_card">
+                <div class="plan_card flexcol">
                     <!-- PLAN UPPER -->
                     <div class="plan_type">
                         <i class="fa-solid fa-user"></i> Singolo
@@ -139,7 +139,7 @@
                 </div>
                 <!-- /PLAN CARD -->
                 <!-- PLAN CARD -->
-                <div class="plan_card">
+                <div class="plan_card flexcol">
                     <!-- PLAN UPPER -->
                     <div class="plan_type">
                         <i class="fa-solid fa-users"></i> Team
@@ -183,8 +183,11 @@
                         <div class="plan_highlights">
                             <h5>Punti Salienti del piano</h5>
                             <ul>
-                                <li>Invia file fino a 100gb con Dropbox Transfert</li>
+                                <li>Nessun limite di spazio per i file</li>
                                 <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                <li>Possibilità di inserire nuovi membri del team</li>
+                                <li>Gestione dei permessi in base ai ruoli</li>
                             </ul>
                         </div>
                         <!-- /FOOTER -->
@@ -194,7 +197,7 @@
                 </div>
                 <!-- /PLAN CARD -->
                 <!-- PLAN CARD -->
-                <div class="plan_card">
+                <div class="plan_card flexcol">
                     <!-- PLAN UPPER -->
                     <div class="plan_type">
                         <i class="fa-solid fa-building"></i> Azienda
@@ -238,8 +241,11 @@
                         <div class="plan_highlights">
                             <h5>Punti Salienti del piano</h5>
                             <ul>
-                                <li>Invia file fino a 100gb con Dropbox Transfert</li>
                                 <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Servizio assistenza 24h</li>
+                                <li>Possibilità di personalizzazione totale</li>
+
+
                             </ul>
                         </div>
                         <!-- /FOOTER -->
