--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <!-- PLAN UPPER -->
 
                     <!-- PLAN MAIN -->
-                    <div class="plan_description">
+                    <div class="plan_description grow">
                         <!-- PRICE -->
                         <div class="price flexcol">
                             <h4>Professional</h4>
@@ -147,7 +147,7 @@
                     <!-- PLAN UPPER -->
 
                     <!-- PLAN MAIN -->
-                    <div class="plan_description">
+                    <div class="plan_description grow">
                         <!-- PRICE -->
                         <div class="price flexcol">
                             <h4>Advanced</h4>
@@ -205,7 +205,7 @@
                     <!-- PLAN UPPER -->
 
                     <!-- PLAN MAIN -->
-                    <div class="plan_description">
+                    <div class="plan_description grow">
                         <!-- PRICE -->
                         <div class="price flexcol">
                             <h4>Enterprise</h4>
@@ -258,8 +258,22 @@
                 
             </div>
             <!-- /MAIN PLANS -->
-            <div class="enterprise_plans border">
-
+            <!-- ENTERPRISE PLANS -->
+            <div class="enterprise_plans">
+                <div class="plan_type">
+                    <i class="fa-solid fa-building"></i> Team
+                </div>
+                <div class="plan_description flex space bttn_noshrink">
+                    <div class="en-l-col flexcol">
+                        <h4>Professional</h4>
+                        <span><strong>Contatta l'ufficio vendite per i prezzi</strong></span>
+                        <span>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala </span>
+                    </div>
+                    <div class="button">
+                        <a class="white" href="">Contatta l'ufficio vendite</a>  
+                    </div>
+                </div>
+            <!-- /ENTERPRISE PLANS -->                
             </div>
         </section>
         <!-- /SECTION -->
