feat: contact us section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
         <!-- /HERO -->
 
-        <!-- SECTION -->
+        <!-- PRICES -->
         <section id="price" class="billing small-cont">
             <!-- BILLING SELECTOR -->
             <div class="billing_type">
@@ -272,22 +272,24 @@
                     <div class="button">
                         <a class="white" href="">Contatta l'ufficio vendite</a>  
                     </div>
-                </div>
-            <!-- /ENTERPRISE PLANS -->                
+                </div>             
             </div>
+            <!-- /ENTERPRISE PLANS -->   
         </section>
-        <!-- /SECTION -->
+        <!-- /PRICES -->
 
-        <!-- SECTION -->
+        <!-- CONTACT US-->
         <section id="salescontact" class="contactus small-cont flex">
-            <div class="leftcol photo_adv border">
-
+            <div class="leftcol photo_adv">
+                <img src="./img/partner.png" alt="Partners Photo">
             </div>
-            <div class="rightcol contact border">
-
+            <div class="rightcol contact">
+                <h3>Entra in contatto con un Dropbox partner</h3>
+                <p>Trova un partner Dropbox e HelloSign di fiducia- ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <a href="">Trova un partner</a>
             </div>
         </section>
-        <!-- /SECTION -->
+        <!-- /CONTACT US -->
 
         <!-- SECTION -->
         <section id="functions" class="description small-cont">
