feat:functions section

--- a/index.html
+++ b/index.html
@@ -291,24 +291,49 @@
         </section>
         <!-- /CONTACT US -->
 
-        <!-- SECTION -->
+        <!-- FUNCTIONS -->
         <section id="functions" class="description small-cont">
-            <div class="disclaimer border">
-
+            <div class="disclaimer">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
             </div>
             <div class="function flex wrap">
-                <div class="infocard border"></div>
-                <div class="infocard border"></div>
-                <div class="infocard border"></div>
-                <div class="infocard border"></div>
-                <div class="infocard border"></div>
-                <div class="infocard border"></div>
+                <div class="infocard">
+                    <img src="./img/business-feature-switching-tools.png" alt="Switch Tools">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="infocard">
+                    <img src="./img/business-feature-send-files-it.png" alt="Send Files">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="infocard">
+                    <img src="./img/business-feature-coordinate-it.png" alt="Coordinate Collaborators">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="infocard">
+                    <img src="./img/business-feature-integrations-it.png" alt="Integrate">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="infocard">
+                    <img src="./img/business-feature-multi-device.png" alt="Multi-Device">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="infocard">
+                    <img src="./img/business-feature-security.png" alt="Security">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div> 
             </div>
-            <div class="discovermore border">
-
+            <div class="discovermore leftcol">
+                <h2>Più di 500.000 team utilizzano Dropbox Bussines</h2>
+                <span><a href="">Scopri di più sui nostri clienti</a></span>
             </div>
         </section>
-        <!-- /SECTION -->
+        <!-- /FUNCTIONS -->
 
         <!-- SECTION -->
         <section class="ambassador flex">
