feat:ambassadors cards

--- a/index.html
+++ b/index.html
@@ -335,23 +335,44 @@
         </section>
         <!-- /FUNCTIONS -->
 
-        <!-- SECTION -->
+        <!-- AMBASSADORS -->
         <section class="ambassador flex">
-            <div class="brand-card border flex wrap">
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
+            <div class="brand-card-l flex wrap">
+                <div class="sub-brand">
+                    <img src="./img/designit.svg" alt="Designit Logo">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/arizona_state_university.svg" alt="Arizona State University">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/university_of_florida.svg" alt="University of Florida">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/topps.svg" alt="Topps">
+                </div>
             </div>
-            <div class="brand-card border"></div>
-            <div class="brand-card borde flex wrap">
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
-                <div class="sub-brand border"></div>
+            <div class="brand-card">
+                <img src="./img/designit.svg" alt="">
+                <hr>
+                <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                <span>Morten Thomsen, Global IT Lead</span>
+            </div>
+            <div class="brand-card-r flex wrap">
+                <div class="sub-brand">
+                    <img src="./img/world_bicycle_relief.svg" alt="World Bicycle Relief">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/hearst_corp.svg" alt="Hearst Corp">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/lonely_planet.svg" alt="Lonely Planet">
+                </div>
+                <div class="sub-brand">
+                    <img src="./img/clear_channel.svg" alt="Clear Channel">
+                </div>
             </div>
         </section>
-        <!-- /SECTION -->
+        <!-- /AMBASSADORS -->
 
         <!-- SECTION -->
         <section class="free_trial">
