feat: free trial section

--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@
 
         <!-- SECTION -->
         <section class="free_trial">
-            <div class="small-cont flex"> 
-                <div class="leftcol photo_adv border">
-
+            <div class="small-cont flex flex-start space"> 
+                <div class="photo_adv leftcol">
+                    <h2>Porta Dropbox Bussines nella tua azienda.</h2>
                 </div>
-                <div class="rightcol contact border">
-    
+                <div class="button_bottom">
+                    <a href="">Contatta l'ufficio vendite</a>  
                 </div>
             </div>
             
