feat:faq drop-down menu

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         </section>
         <!-- /AMBASSADORS -->
 
-        <!-- SECTION -->
+        <!-- FREE TRIAL -->
         <section class="free_trial">
             <div class="small-cont flex flex-start space"> 
                 <div class="photo_adv leftcol">
@@ -384,17 +384,50 @@
                     <a href="">Contatta l'ufficio vendite</a>  
                 </div>
             </div>
-            
         </section>
-        <!-- /SECTION -->
+        <!-- /FREE TRIAL -->
 
-        <!-- SECTION -->
+        <!-- FAQ -->
         <section id="support" class="faq small-cont">
-            <div>
-
+            <div class="faq_title">
+                <h2>Domande frequenti</h2>
+            </div>
+            <hr>
+            <div class="faq_content">
+                <div class="faq_sub_title flex space crss-align">
+                    <h6>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h6>
+                    <span class="chevron_down"><i class="fa-solid fa-chevron-down"></i></span>
+                    <span class="chevron_up"><i class="fa-solid fa-chevron-up"></i></span>
+                </div>
+                <div class="faq_text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique qui aperiam quaerat, illo accusantium omnis dignissimos sequi sed nisi assumenda numquam dolorem repellendus fugit, atque voluptas cumque. A? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique praesentium expedita dolorem suscipit reprehenderit repudiandae eveniet voluptas voluptatem ipsum dolore blanditiis voluptatum ducimus, consectetur, quo sint. Quae, ex dolorem.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="faq_content">
+                <div class="faq_sub_title flex space crss-align">
+                    <h6>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h6>
+                    <span class="chevron_down"><i class="fa-solid fa-chevron-down"></i></span>
+                    <span class="chevron_up"><i class="fa-solid fa-chevron-up"></i></span>
+                </div>
+                <div class="faq_text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique qui aperiam quaerat, illo accusantium omnis dignissimos sequi sed nisi assumenda numquam dolorem repellendus fugit, atque voluptas cumque. A? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique praesentium expedita dolorem suscipit reprehenderit repudiandae eveniet voluptas voluptatem ipsum dolore blanditiis voluptatum ducimus, consectetur, quo sint. Quae, ex dolorem.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="faq_content">
+                <div class="faq_sub_title flex space crss-align">
+                    <h6>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h6>
+                    <span class="chevron_down"><i class="fa-solid fa-chevron-down"></i></span>
+                    <span class="chevron_up"><i class="fa-solid fa-chevron-up"></i></span>
+                </div>
+                <div class="faq_text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique qui aperiam quaerat, illo accusantium omnis dignissimos sequi sed nisi assumenda numquam dolorem repellendus fugit, atque voluptas cumque. A? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique praesentium expedita dolorem suscipit reprehenderit repudiandae eveniet voluptas voluptatem ipsum dolore blanditiis voluptatum ducimus, consectetur, quo sint. Quae, ex dolorem.</p>
+                </div>
+                <hr>
             </div>
         </section>
-        <!-- /SECTION -->    
+        <!-- /FAQ -->    
     </main>
     <!-- /MAIN -->
 
